--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<script>
+    let a = prompt ('Как вас зовут?')
+    name();
+    function name(){
+        alert('Привет ' + a +'!')
+    }
+</script>
+
+
+
     <div class="container">
         <h1 class="title">Интернет магазин часов</h1>
     <p class="dsc">В нашем магазине вы найдете лучшие часы.</p>
